--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="home-sci">
                 <a href="https://linkedin.com/in/alialucas7"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/alialucas7"><i class='bx bxl-github'></i></a>    
-                <a href="#"><i class='bx bxl-steam'></i></a>                 
+                <a href="#"><i class='bx bxl-stack-overflow'></i></a>                 
         </div>
     </section>
 
