--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             
                     
             <div class="btn-box">
-                <a class="btnfos-1" href="#about" data-section="home" data-value="btn_about">
+                <a class="btnfos-1" href="#about">
                     <svg>
                                 <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                     </svg>         
                 About Me</a>
-                <a class="btnfos-1" href="https://drive.google.com/file/d/1th6q4nGwnP0UC0U7aFPJqwL5xAwQfdw3/view?usp=sharing" data-section="home" data-value="btn_CV">
+                <a class="btnfos-1" href="https://drive.google.com/file/d/1th6q4nGwnP0UC0U7aFPJqwL5xAwQfdw3/view?usp=sharing">
                     <svg>
                                     <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                     </svg>         
