--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                     <div class="portofolio-layer">
                         <h4 data-section="portofolio" data-value="titleproject1">Work Environment</h4>
                         <p data-section="portofolio" data-value="project1">This is my configuration, which I used to customized my own window manager whith the C languaje and working environment in Archlinux for ethical pentesting practices</p>
-                    <a href="https://github.com/alialucas7/chadwm" class="portofolio_buton">
+                    <a href="https://github.com/alialucas7/dwm-lucas/" class="portofolio_buton">
                         Demo <i class='portofolio_icon bx bxs-chevrons-right'></i>
                     </a>
                     <a class="portofolio_cajaL">
